@startuml DDD

hide circle
hide fields
' ======= layout =========
skinparam backgroundColor #fcf9ea
skinparam titleBorderRoundCorner 15
skinparam titleFontSize 30
skinparam classAttributeIconSize 0
skinparam titleFontName Arial Black
skinparam titleFontColor #f8a978
skinparam roundcorner 20
skinparam stereotypeCBackgroundColor ffc5a1
left to right direction

skinparam class {

ArrowColor ffc5a1
BorderColor White
BackgroundColor badfdb
BackgroundColor<<Event>> skyblue
BackgroundColor<<Service>> Moccasin
}
left to right direction

package "<<agr Prosumer>>"{
    class Prosumer<<entity>><<root>>{}
    class ProsumerId<<vo>>{}


    Prosumer --> "1" ProsumerId

    
}

package "<<agr Profile>>"{
    class Profile<<entity>><<root>>{

    }
    class ProfileId<<vo>>{}
    class ProfileTimeStamp<<vo>>{}
    class ProfileLoad<<vo>>{} 
    class SoldEnergy<<vo>>{}
    class BoughtEnergy<<vo>>{}
    class PhotovoltaicEnergyLoad<<vo>>{}
    class StateOfCharge<<vo>>{}

    note right{
        Balance of the Prosumer in kw/h, positive values lead to buy energy from the grid
    }

    Prosumer --> "1" Profile
    Profile --> "1" ProfileTimeStamp
    Profile --> "1" ProfileId
    Profile --> "1" ProfileLoad

    Profile --> "1" SoldEnergy
    Profile --> "1" BoughtEnergy
    Profile --> "1" PhotovoltaicEnergyLoad
    Profile --> "1" StateOfCharge
    
    note right of ProfileLoad
    Energy required by the user in the interval
    end note 
    
}


package "<<agr User>>"{
    class User<<entity>><<root>>{

    }
    class UserId<<vo>>{}
    class UserName<<vo>>{}
    class UserEmail<<vo>>{}
    class UserPassword<<vo>>{}
    class UserPhone<<vo>>{}

    User --> "1" UserId
    User --> "1" UserName
    User --> "1" UserEmail
    User --> "1" UserPassword
    User --> "1" UserPhone
    Prosumer --|> "1" User
}

package "<<agr Administrator>>"{
    class Administrator<<entity>><<root>>{

    }
    class AdminId<<vo>>{}

    Administrator --|> User
   Administrator--> "1" AdminId
}

package "<<agr CommunityManager>>"{
    class CommunityManager<<entity>><<root>>{}
    class CommunityManagerId <<vo>>
     CommunityManager --|> User
     CommunityManager --> "1" CommunityManagerId
}



package "<<agr Battery(ESS)>>"{
    class Battery<<entity>><<root>>{}
    class BatteryId<<vo>>{}
    class BatteryName<<vo>>{}
    class MaxCapacity<<vo>>{}
    class Efficiency<<vo>>{}
    class MaxChargeDischarge <<vo>>{}
    

    Prosumer --> "1" Battery
    Battery --> "1" BatteryId
    Battery --> "1" BatteryName
    Battery --> "1" MaxCapacity
    Battery --> "1" Efficiency
    Battery --> "1" MaxChargeDischarge
}


package "<<agr Community>>"{
    class Community<<entity>><<root>>{

    }
    class CommunityId<<vo>>{}
    class CommunityName<<vo>>{}
    class CommunityProsumerIds<<array>>{
    }
    Community --> "1" CommunityId
    Community -> "1" CommunityName
    Community --> "1" CommunityProsumerIds
    Community --> "1" CommunityManager
}

package "<<agr MembershipRequest>>" {
    class MembershipRequest<<entity>><<root>>{}
    class RequestId<<vo>>{}
    class ProsumerId<<vo>>{}
    class CommunityId<<vo>>{}
    class Status<<vo>>{}
    class TimeStamp<<vo>>{}

    MembershipRequest --> "1" RequestId
    MembershipRequest --> "1" ProsumerId
    MembershipRequest --> "1" CommunityId
    MembershipRequest --> "1" Status
    MembershipRequest --> "1" TimeStamp
    Prosumer --> "1..*" MembershipRequest
    CommunityManager --> "1..*" MembershipRequest
}

package "<<agr CommunityEnergyProfile>>" {
    class CommunityEnergyProfile<<entity>><<root>>{}
    class CommunityEnergyProfileId<<vo>>{}
    class TimeStamp<<vo>>{}
    class TotalProduction<<vo>>{}
    class TotalConsumption<<vo>>{}
    class SharedEnergy<<vo>>{}

    CommunityEnergyProfile --> "1" CommunityEnergyProfileId
    CommunityEnergyProfile --> "1" TimeStamp
    CommunityEnergyProfile --> "1" TotalProduction
    CommunityEnergyProfile --> "1" TotalConsumption
    CommunityEnergyProfile --> "1" SharedEnergy
    Community --> "1..*" CommunityEnergyProfile
}

@enduml